<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Bottom Sheet Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@color/card_background"
        android:elevation="8dp">


        <!-- Input Section -->
        <com.bdajaya.adminku.ui.components.CardInputView
            android:id="@+id/brand_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:civ_colorStroke="@color/card_background"
            app:civ_colorTitle="@color/text_primary_light_dark"
            app:civ_title="@string/add_brand"
            app:civ_inputType="TEXT"
            app:civ_textCase="PROPER"
            app:civ_counterEnabled="true"
            app:civ_maxLength="16"
            app:civ_hintText="@string/brand_name"
            app:civ_positionGroup="first"/>

        <!-- Action Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/cancel"/>

            <Space
                android:layout_width="12dp"
                android:layout_height="1dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/add_brand"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
